@@ -1906,8 +1906,8 @@ ACCMSGS=OFF
 # Disable the subsystem that prevents numerous mud connections from the
 # same ip address in a short timespan.
 # 
-# HUNGER, THIRST
-# Disables the tendency for players to get hungry and/or thirsty over time.
+# HUNGER, THIRST, FATIGUE
+# Disables players getting hungry, thirsty, and/or fatigued over time.
 #
 # LOGOUTS
 # Disables the removal of characters from the game world on logout.
